--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <nav>
-        <span>chirpus inc.</span>
+        <header>chirpus inc.</header>
         <div class="links">
             <a href="" class="link1">Home</a>
             <a href="" class="link1">Work</a>
@@ -22,33 +22,28 @@
             <a href="" class="link1">Contact</a>
             <a href="" class="hire">Hire Us</a>
         </div>
-
     </nav>
 
-    <div class="container">
-
+   
         <div class="main">
-
             <div class="text">
                 <h2>chirpus inc.</h2>
                 <p>Proin pellentesque uktricies gravida. Vivamus consequat tempus lectus vel tempus. Duis cursus
                     porttitor quam at consectetur. Nulla lobortis laoreet ligula, sed aliquet risus vestibulum
                     pellentesque. Sed vehicula ultrices ante; quis porttitor orci pulvinar in. Pellentesque faucibus
-                    elementum pulvinar.</p>
-
+                    elementum pulvinar.
+                </p>
             </div>
 
             <div class="circle">
-
                 <div class="pink"></div>
                 <div class="purple"></div>
                 <div class="tan"></div>
             </div>
 
         </div>
-
-        <a href="" class="scroll">Scroll Down</a>
-
+    <div>
+    <a href="" class="scroll">Scroll Down</a>
     </div>
 
 </body>
